refactor: Update code